# sorteador_de_livros_para_ler

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
db/: base.db
migrations/2019-02-27-030901_create_books/: down.sql  up.sql
src/: main.rs
src/operator_in_db/: connection.rs  controller.rs  models.rs
src/operator_in_db_2/: lib.rs
src/operators_in_db/: lib.rs  models.rs  schema.rs
