[package]
name = "sorteador_de_livros_para_ler"
version = "0.1.0"
authors = ["gabriel souza <gabrielsouza849@gmail.com>"]

[dependencies]
diesel = { version = "1.4.1", features = ["sqlite"] }
clap = "2.32.0"
dotenv = "0.13.0"
tui = "0.4.0"

[lib]
name = "sorteador_de_livros_para_ler"
path = "./src/operator_in_db/controller.rs"

